Ensure clip-path polygon will never impede desired overflowing content

--- a/packages/frontend/src/features/CategoryProductList/components/SubcategoryProductList/index.module.css
+++ b/packages/frontend/src/features/CategoryProductList/components/SubcategoryProductList/index.module.css
@@ -3,7 +3,7 @@
     grid-template-columns: repeat(1, 1fr);
     gap: 16px;
 
-    clip-path: polygon(-10% -10%, 110% -10%, 110% 100%, -10% 100%);
+    clip-path: polygon(-100px -100px, 110% -100px, 110% 100%, -100px 100%);
 
     padding: 16px 0px;
 
